--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "supervisor nadab.js",
+    "start": "nodemon nadab.js",
     "test": "NODE_ENV=test mocha -t 5000 --reporter dot --growl --exit"
   },
   "devDependencies": {
@@ -17,6 +17,7 @@
     "eslint": "^5.9.0",
     "jest": "^23.6.0",
     "mocha": "^5.2.0",
+    "nodemon": "^1.18.9",
     "sinon": "^7.1.1",
     "sinon-mongoose": "^2.2.1",
     "supervisor": "^0.12.0"
@@ -25,13 +26,16 @@
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
+    "crypto": "^1.0.1",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "imagemagick": "^0.1.3",
     "jsonwebtoken": "^8.4.0",
     "mongodb": "^3.1.10",
     "mongoose": "^5.3.14",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "nodemailer": "^4.7.0"
   }
 }
