--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "imagemagick": "^0.1.3",
+    "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
+    "lodash": "^4.17.11",
     "mongodb": "^3.1.10",
     "mongoose": "^5.3.14",
     "morgan": "^1.9.1",
