--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "supervisor": "^0.12.0"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
@@ -30,6 +31,7 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "googleapis": "^37.1.0",
     "imagemagick": "^0.1.3",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
