--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "nodemon nadab.js",
+    "start": "nodemon -i public/ -i node_modules/ nadab.js",
     "test": "NODE_ENV=test mocha -t 5000 --reporter dot --growl --exit"
   },
   "devDependencies": {
